--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
         <br>
     </div>
     <div class="image">
-        <img src="images/download.jpg" alt="Mg's picture"><br>
+        <img src="images/IMG_20230731_191534.jpg" alt="Mg's picture"><br>
     </div>
     </main>
 </body>
@@ -105,9 +105,6 @@
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
-    }
-    img{
-        border-radius: 50%;
     }
 </style>
 </html>
