--- a/mentor.html
+++ b/mentor.html
@@ -76,10 +76,12 @@
            <p>For in their hands lies the power to shape a future where technology,</p>
            <p>humanity, and compassion unite to create a world of boundless possibilities.</p>
            <br>
-        </div>
-        <div class="image">
+           <div class="image">
             <img src="images/download.jpg" alt="Mg's picture"><br>
+            <figcaption>Subsequently MG decided to go by this icon as he hated taking pictures.</figcaption>
         </div>
+        </div>
+       
     </main>
 </body>
 <style>
@@ -134,13 +136,17 @@
     .image{
         margin-top: 30px !important;
         margin: auto;
-        width: 60%;
+        width: 40%;
         display: flex;
+        flex-direction: column;
         justify-content: flex-end;
         align-items: flex-end;
     }
     img{
-        border-radius: 50%;
+        border-radius: 35%;
+    }
+    figcaption{
+        text-align: center !important;
     }
 </style>
 </html>
