--- a/About.html
+++ b/About.html
@@ -57,7 +57,8 @@
 </body>
 <style>
     body{
-        font-family: Arial, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #f2f2f2;
     }
     header{
         width: 100%;
