--- a/chess.html
+++ b/chess.html
@@ -19,14 +19,63 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="chess-container">
+                <table>
+                    <caption>My Chessboard</caption>
+                 <tr>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                  </tr>
+                  <tr>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                  </tr>
+                  <tr>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                  </tr>
+                  <tr>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                  </tr>
+                  <tr>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                    <td class="white-box"><span class="sr-only">1</span></td>
+                    <td class="black-box"><span class="sr-only">1</span></td>
+                  </tr>
+                </table>
+            </div>
+        </div>
+    </main>
 </body>
 <style>
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #f2f2f2;
+    }
     header{
         width: 100%;
         height: 100px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
+        margin-bottom: 30px;
      }
     nav{
         width: 50%;
@@ -50,5 +99,37 @@
     nav > ul > li > a:visited{
         color: blue
     }
+    .container{
+       max-width: 550px;
+       margin: 0 auto;
+       border-radius: 5px;
+       background-color: #ffffff;
+       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+       padding: 50px
+    }
+    table{
+        border-collapse: separate;
+        border-spacing: 0px;
+        border: 6px solid #000;
+        margin: auto
+    }
+    table td{
+        border: 0px solid black;
+        padding: 50px;
+    }
+    caption{
+        font-size: 40px;
+        margin-bottom: 15px;
+        font-weight: bold;
+    }
+    .black-box{
+        background-color: #b58863;
+    }
+    .white-box{
+        background-color: #f0d9b5;
+    }
+   .sr-only{
+    visibility: hidden;
+   }
 </style>
 </html>
