--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Contact us</title>
 </head>
 <body>
     <header>
-        <h1>Contact Me</h1>
+        <h1>Contact</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Homepage</a></li>
@@ -22,6 +23,7 @@
     <main>
         <div class="contact">
            <form>
+            <h2>Contact Me</h2>
             <label for="name">Your name:</label>
             <input type="text" id="name" required>
             <label for="email">Your email:</label> 
@@ -29,19 +31,28 @@
             <label for="subject">Subject:</label>
             <input type="text" id="subject" required>
             <label for="message">Your Message:</label>
-            <textarea id="message" rows="10" cols="30"></textarea><br>
+            <textarea id="message" rows="10" cols="40" placeholder="Enter your message here...."></textarea><br>
             <button>Send Message</button>
+            <p>Please feel free to reach out to me if you have any questions, comments, or inquiries. I'll get back to you as soon as possible.</p>
+            <p>You can also connect with me on social media:</p>
+            <i class="fab fa-whatsapp"></i><i class="fab fa-telegram"></i><i class="fab fa-facebook"></i>
+                <p>Thank you for visiting my website! I'm looking forward to hearing from you.</p>
            </form>
         </div>
     </main>
 </body>
 <style>
+        body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #f2f2f2;
+    }
     header{
         width: 100%;
         height: 100px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
+        margin-bottom: 25px;
      }
     nav{
         width: 50%;
@@ -50,7 +61,7 @@
     }
     nav > ul{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
         height: 100%;
@@ -71,6 +82,20 @@
     }
     button{
         padding: 7px;
+    }
+    .contact{
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 20px;
+        border-radius: 5px;
+        background-color: #ffffff;
+    }
+    h2{
+        text-align: center;
+        font-size: 30px;
+    }
+    i{
+        margin: 3px;
     }
 </style>
 </html>
