--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 </body>
 <style>
     body{
-        font-family: Arial, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #f2f2f2;
     }
     header{
         width: 100%;
