--- a/mentor.html
+++ b/mentor.html
@@ -85,8 +85,9 @@
     </main>
 </body>
 <style>
-     body{
-        font-family: Arial, sans-serif;
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #f2f2f2;
     }
     header{
         width: 100%;
